namespaces/istio-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    name: istio-ingress
    istio.io/rev: asm-1112-17
