namespaces/istio-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingressgateway
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mygke-istio-ingressgateway
    networking.gke.io/managed-certificates: istio-ingressgateway
    networking.gke.io/v1beta1.FrontendConfig: istio-ingressgateway
spec:
  rules:
  - host: light.alwaysupalwayson.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
